Upgrade katas to Java 10.