@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 BNY Mellon.
+ * Copyright 2018 BNY Mellon.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,14 +17,12 @@
 package bnymellon.codekatas.lambdakata.jdk;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.stream.Collectors;
@@ -50,7 +48,7 @@ public class ClassicSAMInterfaceTest
     public void comparator()
     {
         // TODO - Convert the comparator to a lambda and then to a method reference
-        Comparator<Integer> comparator = new Comparator<Integer>()
+        var comparator = new Comparator<Integer>()
         {
             @Override
             public int compare(Integer one, Integer two)
@@ -62,49 +60,49 @@ public class ClassicSAMInterfaceTest
         Assert.assertEquals(-1, comparator.compare(1, 2));
         Assert.assertEquals(1, comparator.compare(3, 2));
 
-        List<Integer> integers = IntStream.rangeClosed(1, 5).boxed().collect(Collectors.toList());
+        var integers = IntStream.rangeClosed(1, 5).boxed().collect(Collectors.toList());
         Collections.shuffle(integers);
         integers.sort(comparator);
 
-        Assert.assertEquals(Arrays.asList(1, 2, 3, 4, 5), integers);
+        Assert.assertEquals(List.of(1, 2, 3, 4, 5), integers);
     }
 
     @Test
     public void runnable()
     {
-        // Note: The following set reference is "effectively" final, which is a new feature in Java 8
-        List<Integer> set = new ArrayList<>();
+        // Note: The following list reference is "effectively" final, which is a new feature in Java 8
+        var list = new ArrayList<Integer>();
         // TODO - convert the anonymous Inner class to a lambda
-        Runnable runnable = new Runnable()
+        var runnable = new Runnable()
         {
             @Override
             public void run()
             {
-                set.add(1);
+                list.add(1);
             }
         };
         runnable.run();
-        Assert.assertEquals(Collections.singletonList(1), set);
+        Assert.assertEquals(List.of(1), list);
         // TODO - convert the anonymous Inner class to a lambda
         Interval.fromTo(2, 10).run(new Runnable()
         {
             @Override
             public void run()
             {
-                set.add(1);
+                list.add(1);
             }
         });
-        List<Integer> expectedSet = Collections.nCopies(10, 1);
-        Assert.assertEquals(expectedSet, set);
+        var expectedList = Collections.nCopies(10, 1);
+        Assert.assertEquals(expectedList, list);
     }
 
     @Test
     public void callable() throws Exception
     {
         // Note: The following set references is "effectively" final, which is a new feature in Java 8
-        Set<Integer> set = new HashSet<>();
+        var set = new HashSet<Integer>();
         // TODO - convert the anonymous inner class to lambda
-        Callable<Boolean> callable = new Callable<Boolean>()
+        var callable = new Callable<Boolean>()
         {
             @Override
             public Boolean call() throws Exception
@@ -113,14 +111,14 @@ public class ClassicSAMInterfaceTest
             }
         };
         Assert.assertTrue(callable.call());
-        Assert.assertEquals(Collections.singleton(1), set);
+        Assert.assertEquals(Set.of(1), set);
 
-        ExecutorService executor = Executors.newWorkStealingPool();
-        List<Future<Boolean>> futures = executor.invokeAll(Collections.nCopies(5, callable));
+        var executor = Executors.newWorkStealingPool();
+        var futures = executor.invokeAll(Collections.nCopies(5, callable));
 
         // Note: Functions.throwing() is a utility method in Eclipse Collections without which we would
         // have to wrap the call to Future.get() in a try-catch block.
         Assert.assertTrue(futures.stream().map(Functions.throwing(Future::get)).noneMatch(b -> b));
-        Assert.assertEquals(Collections.singleton(1), set);
+        Assert.assertEquals(Set.of(1), set);
     }
 }
